[package]
name = "ark-spartan"
# sync up with Arkwork's version
version = "0.4.0"
authors = [
    # author of original Spartan paper and code base 
    # for which this library is modified from
    "Srinath Setty <srinath@microsoft.com>",
    # authors who contributed to this modification
    "Zhenfei Zhang <zhenfei.zhang@hotmail.com>",
]
edition = "2021"
description = "Spartan ZKP system over arkworks"
documentation = "https://docs.rs/spartan/"
readme = "README.md"
repository = "https://github.com/zhenfeizhang/ark-spartan"
license-file = "LICENSE"
keywords = ["zkSNARKs", "cryptography", "proofs"]
publish = false

[dependencies]
merlin = "3.0.0"
rand = "0.7.3"
digest = "0.8.1"
sha3 = "0.8.2"
rayon = { version = "1.8.0", optional = true }
subtle = { version = "2.4", default-features = false }
rand_core = { version = "0.5", default-features = false }
zeroize = { version = "1", default-features = false }
itertools = "0.10.0"
colored = "2.0.0"
thiserror = "1.0"

rand_chacha = { version = "0.3.0", default-features = false }

ark-ec.workspace = true
ark-ff.workspace = true
ark-poly.workspace = true
ark-poly-commit.workspace = true
ark-std.workspace = true
ark-serialize.workspace = true

ark-bls12-381 = { version = "^0.4.0", default-features = false, features = [
    "curve",
] }
ark-crypto-primitives.workspace = true
derivative = "2.2.0"

[dev-dependencies]
criterion = "0.3.1"


[lib]
name = "libspartan"
path = "src/lib.rs"

[[bin]]
name = "snark"
path = "profiler/snark.rs"

[[bin]]
name = "committed_relaxed_snark_zm"
path = "profiler/committed_relaxed_snark_zm.rs"

[[bin]]
name = "committed_relaxed_snark_hyrax"
path = "profiler/committed_relaxed_snark_hyrax.rs"

[[bin]]
name = "nizk"
path = "profiler/nizk.rs"

[[bench]]
name = "snark"
harness = false

[[bench]]
name = "nizk"
harness = false

[[bench]]
name = "committed_relaxed_snark"
harness = false

[features]
# default = ["curve25519-dalek/simd_backend"]
default = ["parallel"]
parallel = [
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-std/parallel",
    "ark-poly/parallel",
    "ark-poly-commit/parallel",
    "rayon",
]
profile = []

[lints.clippy]
ptr_arg = { level = "allow", priority = 0 }
