[package]
name = "supernova"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-crypto-primitives.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-poly-commit = { workspace = true, optional = true }

ark_spartan = { git = "ssh://git@github.com/nexus-xyz/committed-relaxed-spartan.git", package = "ark-spartan", optional = true }

merlin = { version = "3.0.0", optional = true }
sha3 = { version = "0.10", default-features = false }

tracing = { version = "0.1", default-features = false }
rayon = { version = "1.8.0", optional = true }

[features]
default = ["parallel"]
parallel = [
   "rayon",
   "ark-ff/parallel",
   "ark-ec/parallel",
   "ark-std/parallel",
   "ark-crypto-primitives/parallel",
   "ark-r1cs-std/parallel",
]
spartan = ["ark-poly-commit", "ark_spartan", "merlin"]

[dev-dependencies]
ark-test-curves.workspace = true

ark-pallas.workspace = true
ark-vesta.workspace = true

ark-bn254.workspace = true
ark-grumpkin.workspace = true

tracing-subscriber = { version = "0.2", default-features = false, features = [
   "fmt",
   "ansi",
] }

