[package]
name = "supernova"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
ark-ff.workspace = true
ark-ec.workspace = true
ark-std.workspace = true
ark-crypto-primitives.workspace = true
ark-relations.workspace = true
ark-r1cs-std.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-poly-commit = { workspace = true, optional = true }

ark_spartan = { path = "../spartan", package = "ark-spartan", optional = true }

merlin = { version = "3.0.0", optional = true }
sha3 = { version = "0.10", default-features = false }

tracing = { version = "0.1", default-features = false }
rayon = { version = "1.8.0", optional = true }
subtle = "2.5.0"
rand_core = "0.6.4"
ff = "0.13.0"
hex = "0.4.3"

halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20" }
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves.git", rev = "8e4cb9f0c66c864e8ca25da07f50ae95f664a5b7" }

[features]
default = ["parallel", "spartan"]
parallel = [
   "rayon",
   "ark-ff/parallel",
   "ark-ec/parallel",
   "ark-std/parallel",
   "ark-crypto-primitives/parallel",
   "ark-r1cs-std/parallel",
]
spartan = ["ark-poly-commit", "ark_spartan", "merlin"]

[dev-dependencies]
ark-test-curves.workspace = true

ark-pallas.workspace = true
ark-vesta.workspace = true

ark-bn254.workspace = true
ark-grumpkin.workspace = true

tracing-subscriber = { version = "0.2", default-features = false, features = [
   "fmt",
   "ansi",
] }
