[package]
name = "nexus-tools"
authors = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
publish = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
default-run = "cargo-nexus"

[[bin]]
name = "cargo-nexus"
path = "src/bin/cargo-nexus.rs"

[[bin]]
name = "nexus-run"
path = "src/bin/nexus-run.rs"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15.7"
tracing = { version = "0.1", default-features = false, features = ["std"] }

cargo_metadata = "0.18.1"
clap.workspace = true

nexus-tools-dev = { path = "./tools-dev", default-features = false }
nexus-config = { path = "../config" }
nexus-vm = { path = "../vm" }
nexus-prover = { path = "../prover", features = ["verbose"] }
nexus-jolt = { path = "../jolt" }
nexus-tui = { path = "./tui" }

ark-spartan = { path = "../spartan" }
ark-serialize.workspace = true
