[package]
name = "nexus-vm"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[dependencies]
elf = "0.7"
nexus-common = { path = "../common" }
once_cell = "1.19"
rrs-lib = { git = "https://github.com/GregAC/rrs/" }
thiserror = "1.0"
variant_count = "1.1"
rangemap = "1.5.1"
num-derive.workspace = true
num-traits.workspace = true