[package]
name = "nexus-vm"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[build-dependencies]
tempfile = "3.14"

[dependencies]
elf = "0.7"
nexus-common = { path = "../common" }
nexus-precompiles = { path = "../precompiles" }
once_cell = "1.19"
rrs-lib = { git = "https://github.com/GregAC/rrs/" }
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
variant_count = "1.1"
rangemap = "1.5.1"

serde.workspace = true
num-derive.workspace = true
num-traits.workspace = true
