[package]
name = "nexus-vm"
edition.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[build-dependencies]
tempfile = "3.14"

[dependencies]
elf = "0.7"
itertools = "0.14"
nexus-common = { path = "../common" }
nexus-precompiles = { path = "../precompiles" }
once_cell = "1.19"
rrs-lib = { git = "https://github.com/GregAC/rrs/" }
rustc-hash = "2.1.1"
serde_arrays = "0.2"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-test = "0.2"
variant_count = "1.1"
rangemap = { version = "1.5.1", features = ["serde1"] }

serde.workspace = true
num-derive.workspace = true
num-traits.workspace = true
tiny-keccak.workspace = true

[dev-dependencies]
serial_test = "3.2.0"

[lints.clippy]
doc-overindented-list-items = { level = "allow", priority = 0 } # doc comments padding

[[bin]]
name = "nexus-vm-runner"
path = "src/runners/nexus-vm-runner.rs"
